Fix overflow issues when using camera docks on the top/bottom of the screen

--- a/css/misc.css
+++ b/css/misc.css
@@ -8,4 +8,6 @@
 
 #ui-middle > #ui-conversation-hud {
   z-index: 20;
+  flex: 1;
+  min-height: 0;
 }
